--- a/Css/Body.css
+++ b/Css/Body.css
@@ -1,35 +1,39 @@
-.Body ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
+ ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
 	height: 40px;;
-  overflow: hidden;
-  background-color: #212A9A;
-  width: 100%;
+    overflow: hidden;
+    background-color: #B8D2EC;
+    width: 100%;
+	border-bottom: 1px solid #000000;
+	border-top: 1px solid #000000;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.Body ul .Menu li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-align: center;
-  text-decoration: none;
-	font-weight: bolder;
+ ul .Menu li a {
+    display: block;
+    padding: 8px 16px;
+	width: 100px;
+    text-align: center;
+    text-decoration: none;
 	height: 40px;
 	font-size: 20px;
+	border-right: 1px solid #FFFFFF;
 }
 
 /* Change the link color on hover */
-li a:hover {
+li a:hover{
+	width: 100%;
 	height: 40px;
-  background-color: #454545;
-  color: white;
+	color: #FFFFFF;
+    background-color:#067886;
+  
 }
 
 li {
-  float: left;
-	padding-left: 30px;
+    float: left;
 }
 
 #Menu{
@@ -38,11 +42,9 @@ li {
 }
 #Menu td a{
 	margin-right: 15px;
-  color: #000;
-  padding: 8px 16px;
-  text-align: center;
-  text-decoration: none;
-	font-weight: bolder;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
 	height: 40px;
 	font-size: 20px;
 }
@@ -56,17 +58,28 @@ li {
 		
 }
 .Middle{
-	width: 100%;
-	height: 700px;
-	background-image: url("../Images/BackGround.jpg");
-	padding:  60px  200px 60px 200px;
+	width: 1000px;
+    height: 1300px;
+    margin: auto;
+   	background:#FFFFFF;
 }
 .Tb_Body{
 	width: 100%;
+	height: 100%;
 }
-.News{
-	width: 1000px;
-	background: #055156;
-	position: absolute;
-	margin: 0 auto;
+#News{
+	
+	 width: 100%;
+    height: 1500px;
+    
+	background: #D5D5D5;
+    margin: 0 auto;
+    display: flex;
+}
+table{
+	border-collapse: collapse;
+}
+.Avarta {
+	width: 200px;
+	height: 200px;
 }
